--- a/css/components/leftNav.scss
+++ b/css/components/leftNav.scss
@@ -1,5 +1,8 @@
 @import '../variables';
 .LeftNav {
+  background-image: url('/images/menu-concordatside.png');
+  background-size: cover;
+  background-position: center;
   position: absolute;
   left: 0;
   top: 0;
