--- a/css/components/rightNav.scss
+++ b/css/components/rightNav.scss
@@ -1,5 +1,8 @@
 @import '../variables';
 .RightNav {
+  background-image: url('/images/menu-empireside.png');
+  background-size: cover;
+  background-position: center;
   position: absolute;
   right: 0;
   top: 0;
